--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,12 @@ requires-python = ">= 3.8"
 maintainers = [
   {name = "The Odd Cell"}
 ]
-description = Be able to make GET requests to buss:// websites and get IPs for buss:// websites."
+description = "Be able to make GET requests to buss:// websites and get IPs for buss:// websites."
 readme = "README.md"
 license = {text = "MIT License"}
 keywords = ["webx", "buss", "facedev"]
 classifiers = [
-  "Development Status :: 4 - Beta",
+  "Development Status :: 5 - Stable",
   "Intended Audience :: Developers",
   "Topic :: API",
   "License :: OSI Approved :: MIT License",
