--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-version = "1.0.1"
-name = "bussinwebx-get"
+version = "1.0.2"
+name = "bussinwebx_get"
 requires-python = ">= 3.8"
 maintainers = [
   {name = "The Odd Cell"}
