--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
-version = "2.0.0"
+version = "2.0.1"
 name = "bussinwebx_get"
+dependencies = [requests,]
 requires-python = ">= 3.7"
 maintainers = [
   {name = "The Odd Cell"}
