--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,9 @@
 [project]
 version = "2.0.1"
 name = "bussinwebx_get"
-dependencies = [requests,]
+dependencies = [
+  requests,
+]
 requires-python = ">= 3.7"
 maintainers = [
   {name = "The Odd Cell"}
