--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 version = "2.0.1"
 name = "bussinwebx_get"
 dependencies = [
-  requests,
+  "requests",
 ]
 requires-python = ">= 3.7"
 maintainers = [
